# hummbl-toolkit

./: AGENTS.md  CHANGELOG.md  CODEOWNERS  CONSTITUTION.md  CONTRIBUTING.md  DOCTRINE.md  KRINEIA.md  LICENSE  README.md  SECURITY.md  hummbl.repo.yaml
.github/: CODEOWNERS
_receipts/krineia/: primary.jsonl
adversary-emulation/: AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
adversary-emulation/adversary_emulation_playbook/: __init__.py  audit.py  cli.py  emulate.py  gap_analyzer.py  playbook_loader.py
adversary-emulation/adversary_emulation_playbook/scenarios/: apt28.yaml  lazarus.yaml
adversary-emulation/examples/: apt28_detections.json
adversary-emulation/tests/: test_cli.py  test_emulate.py  test_gap_analyzer.py  test_playbook_loader.py
bif/: AGENTS.md  CLAUDE.md  FRAMEWORK.md  LICENSE  README.md  SECURITY.md  USE_CASES.md  bif_cli.py  mcp_server.py  pyproject.toml
bif/examples/: README.md
bif/examples/anthropic/: 01_Claude_API_Core_Reference.md  04_Delta_Document.md  CPN_COURSE_COMPLETION_MAP.md  README.md
bif/templates/: ai-ml-platform.md  cloud-platform.md  programming-framework.md  saas-evaluation.md
bif/tests/: conftest.py  test_cli.py  test_get_template.py  test_list_templates.py  test_mcp_protocol.py  test_mcp_server.py  test_session_status.py  test_start_session.py  test_validate_batch.py
docs/adr/: ADR-001-repo-governance-baseline.md
docs/handoffs/: 2026-06-22-repo-governance-baseline.md
evidence-gate/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE_POSTURE.md  README.md  SECURITY.md  contribution_learnings.jsonl  llms.txt
evidence-gate/docs/: REPO_HEALTH.md  evidence-gate-v2-schema.md
evidence-gate/rules/: ER-001-multiplier-no-source.toml  ER-002-numeric-with-unit-no-source.toml  ER-003-code-ident.toml  ER-004-sha-ref.toml  ER-005-pr-ref.toml  ER-006-exact-percent.toml  ER-007-dated-incident.toml  ER-008-broccolilly-tuple.toml  _families.toml  _surfaces.toml
evidence-gate/scripts/: rule_loader.py  (+1 more)
showcase/: AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  showcase.py
showcase/dashboard/: data.json  index.html
showcase/src/showcase/: __init__.py  adapters.py  briefing.py  bus.py  governance.py
