[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bif"
version = "1.0.0"
description = "Batch Ingestion Framework — systematic methodology for technical knowledge acquisition using AI assistants"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=9.1.0"]

[project.scripts]
bif = "bif_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
