[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "founder-mode-showcase"
version = "0.1.0"
description = "Demo the HUMMBL multi-agent governance mesh in 5 minutes — zero API keys, zero config."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "hummbl-governance>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
showcase = "showcase:main"

[tool.setuptools.packages.find]
where = ["src"]
